# webz

./: .env  Cargo.toml  configuration.yaml
migrations/: 20240204164622_create_users_table.sql
scripts/: init_db.sh
src/: main.rs
