[package]
name = "webz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
config = "0.14.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]
